frontend/static/frontend/styles.css
* {
  font-family: 'Nunito', sans-serif;
}
body {
  margin: 0;
}

h1 {
  text-align: center;
}

.navbar {
  background-color: #1a750e;
  border-bottom: 1px solid black;
}

.title {
  background-image: url(/static/frontend/bg.jpg);
  background-size: cover;
  padding: 125px;
  text-align: center;
}

ul {
  list-style-type: none;
  overflow: hidden;
  margin: 0;
  padding: 0;
}

li {
  float: right;
}
li a {
  display: block;
  padding: 1rem;
  color: #ffba0a;
  text-decoration: none;
  border-right: 1px solid #114709;
}
li a:hover {
  background-color: #114709;
}

.about {
  display: flex;
  justify-content: center;
  column-gap: 25px;
}

#side-text {
  margin: 2rem;
  border: 2px solid #1a750e;
  padding-left: 1.5rem;
  padding-right: 1.5rem;
  width: 50%;
}

.side-image {
  width: 50%;
  height: auto;
  margin-right: 1.5rem;
  margin-top: 2rem;
  align-content: center;
}

#image {
  width: 100%;
  height: 100%;
}

.text-block {
  border: 2px solid #1a750e;
  text-align: center;
  padding-left: 20px;
  padding-right: 20px;
}

.paragraph-block {
  padding-left: 1.5rem;
  padding-right: 1.5rem;
}

.normal {
  color: white;
}

.fade-out {
  color: white;
  animation: fade 4.1s infinite;
}

@keyframes fade {
  0% {
    opacity: 1;
  }
  50% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

